# rais

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: bench_allocator.cpp  bench_deque.cpp  bench_metal.mm  bench_queue.cpp  bench_scheduler.cpp
experiments/: bench_inference_llm.cpp  bench_mlx_concurrent.py  fetch_model.py  plot_llm.py  plot_mlx_concurrent.py  results.tsv
include/rais/: allocator.hpp  deque.hpp  layer_streamer.hpp  metal_allocator.hpp  metal_executor.hpp  queue.hpp  scheduler.hpp  streaming.hpp  task.hpp
shaders/: rais_kernels.metal
src/: layer_streamer.cpp  metal_allocator.mm  metal_executor.mm  scheduler.cpp  streaming.cpp
tests/: test_allocator.cpp  test_continuations.cpp  test_deque.cpp  test_io_lane.cpp  test_layer_streamer.mm  test_metal_allocator.mm  test_metal_executor.mm  test_queue.cpp  test_scheduler.cpp
